src/test/minic/error/enum_var_decl_wrong_type.block
test {
    enum Color {RED, GREEN, BLUE} p = 2.5;
}